--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -19,6 +19,13 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="alert alert-danger" role="alert">
+                    {{ messages[0] }}
+                </div>
+            {% endif %}
+        {% endwith %}
     </div>
 </div>
 {% endblock %}
