--- a/templates/base.html
+++ b/templates/base.html
@@ -15,15 +15,15 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
               {% if not current_user.is_authenticated %}
               <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Login</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.signup') }}">Sign up</a></li>
               {% endif %}
               {% if current_user.is_authenticated %}
+              <li class="nav-item"></li>
+                <a class="nav-link active" aria-current="page" href="{{ url_for('get_random_quote') }}">Home</a>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('addQuote') }}">Add Random Text</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.profile') }}">Profile</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a></li>
               {% endif %}
